# ubidots-python

./: .gitignore  AUTHORS.rst  CHANGES.rst  LICENSE  README.markdown  README.md  README.rst  apiclient.py  integrationtest.py  pyproject.toml  requirements.pip  setup.cfg  setup.py  tests.py  tox.ini
src/ubidots/: __init__.py  api_client.py  client.py  config.py  error.py  resource.py
src/ubidots/api_resources/: __init__.py  device.py  variable.py
src/ubidots/mixins/: __init__.py  api_resource_mixin.py  requests_mixin.py
src/ubidots/resources/: __init__.py  device.py
tests/: conftest.py  test_api_client.py  test_client.py  test_data_api.py
tests/api_resources/: conftest.py  test_device.py  test_variable.py
tests/resources/: test_device.py
ubidots/: __init__.py  apiclient.py
