[metadata]
name = ubidots
version = 0.0.1-beta
author = Ubidots Team
author_email = info@ubidots.com
description = Ubidots API Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ubidots/ubidots-python
project_urls =
    Bug Tracker = https://github.com/ubidots/ubidots-python/issues
classifiers =
	Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = src
